kubernetes/keycloak/003_keycloak-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: keycloak
  namespace: datamesh
spec:
  hosts:
  - "*"
  gateways:
  - idea-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: keycloak.datamesh.svc.cluster.local
        port:
          number: 8080
